--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="3">Печенье (выпечка), десерты</td>
+                    <td rowspan="3"><img src="img/1.jpeg" alt="Миндальное печенье"></td>
                     <td>
                         Миндальное печенье<br>
                         Состав:<br>
