--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="3"><img src="img/1.jpeg" alt="Миндальное печенье"></td>
+                    <td rowspan="1"><img src="img/1.jpeg" alt="Миндальное печенье"></td>
                     <td>
                         Миндальное печенье<br>
                         Состав:<br>
@@ -84,6 +84,7 @@
                     <td>48ч</td>
                 </tr>
                 <tr>
+                    <td rowspan="1"><img src="img/1.jpeg" alt="Шоколадное печенье"></td>
                     <td>
                         Шоколадное печенье<br>
                         Состав:<br>
@@ -102,6 +103,7 @@
                     <td>48ч</td>
                 </tr>
                 <tr>
+                    <td rowspan="1"><img src="img/1.jpeg" alt="Арахисовое печенье"></td>
                     <td>
                         Арахисовое печенье<br>
                         Состав:<br>
@@ -109,6 +111,26 @@
                         - рисовая мука<br>
                         - творожный сыр<br>
                         - молочный шоколад
+                    </td>
+                    <td>115 руб</td>
+                    <td>45гр</td>
+                    <td>К-222<br>Б-5,16<br>Ж-15,25<br>У-15,03</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/1.jpeg" alt="Миндальный круассан"></td>
+                    <td>
+                        Миндальный круассан<br>
+                        Состав:<br>
+                        - мука с высоким содержанием клейковины<br>
+                        - масло сливочное 82%<br>
+                        Начинка<br>
+                        -миндаль
+                        -миндальная мука
+                        -Сахар
+                        -яйца
+                        -заварной крем
+                        -масло
                     </td>
                     <td>115 руб</td>
                     <td>45гр</td>
