--- a/index.html
+++ b/index.html
@@ -132,14 +132,31 @@
                         -заварной крем
                         -масло
                     </td>
-                    <td>115 руб</td>
-                    <td>45гр</td>
-                    <td>К-222<br>Б-5,16<br>Ж-15,25<br>У-15,03</td>
-                    <td>48ч</td>
+                    <td>240 руб</td>
+                    <td>120гр</td>
+                    <td>К-414<br>Б-8,4<br>Ж-24,6<br>У-39,72</td>
+                    <td>24ч</td>
                 </tr>
-                <!-- Другие строки таблицы с продуктами и сочетаниями -->
                 <tr>
-                    <td rowspan="2">Другие десерты</td>
+                    <td rowspan="1"><img src="img/1.jpeg" alt="ПП банановый кекс"></td>
+                    <td>
+                        ПП банановый кекс<br>
+                        Состав:<br>
+                        - банан<br>
+                        - сироп топинамбура<br>
+                        - миндаль<br>
+                        - фундук<br>
+                        - грецкий орех
+                        - овсяные хлопья
+                        - рисовая мука     
+                    </td>
+                    <td>150 руб</td>
+                    <td>100гр(+/-5гр)</td>
+                    <td>К-250,47<br>Б-6,50<br>Ж-19,48<br>У-10,83</td>
+                    <td>24ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/1.jpeg" alt="Меренговый рулет"></td>
                     <td>
                         Меренговый рулет<br>
                         Состав:<br>
@@ -156,6 +173,7 @@
                     <td>15ч</td>
                 </tr>
                 <tr>
+                    <td rowspan="1"><img src="img/1.jpeg" alt="Десерт Павлова"></td>
                     <td>
                         Десерт Павлова<br>
                         Состав:<br>
@@ -173,6 +191,239 @@
                     <td>к-240<br>б-3,68<br>ж-8,38<br>у-38,66</td>
                     <td>16ч</td>
                 </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_2.jpg" alt="Тирамису"></td>
+                    <td>
+                        Тирамису<br>
+                        Состав:<br>
+                        - яйцо<br>
+                        - маскарпоне<br>
+                        - сахар пудра<br>
+                        - печенье "Савоярди"<br>
+                        - растворимый кофе
+                    </td>
+                    <td>200 руб</td>
+                    <td>135гр (+/-10гр)</td>
+                    <td>К-316<br>Б-7,5<br>Ж-19,9<br>У-26,3</td>
+                    <td>72ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_3.jpg" alt="Чизкейк"></td>
+                    <td>
+                        Чизкейк<br>
+                        Состав:<br>
+                        - желатин<br>
+                        - вода<br>
+                        - печенье "Юбилейное"<br>
+                        - слив масло<br>
+                        - твор.сыр<br>
+                        - сливки 33%<br>
+                        - сахарная пудра
+                    </td>
+                    <td>195 руб</td>
+                    <td>125гр (+/-10гр)</td>
+                    <td>к-468; б-6,3; ж-35,4; у-31,7</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_4.jpg" alt="Сан-Себастьян"></td>
+                    <td>
+                        Сан-Себастьян<br>
+                        Состав:<br>
+                        - тв-ый сыр<br>
+                        - сах пудра<br>
+                        - яйцо<br>
+                        - крахмал<br>
+                        - сливки 33%<br>
+                        - молочный шоколад<br>
+                        - сливки 33%
+                    </td>
+                    <td>210 руб</td>
+                    <td>120гр (+/-10гр)</td>
+                    <td>к-418; б-7,2; ж-30,6; у-28,4</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_5.jpg" alt="Моти-Банан"></td>
+                    <td>
+                        Моти-Банан<br>
+                        Состав:<br>
+                        - Клейковая рисовая мука<br>
+                        - Сахарная пудра<br>
+                        - Фильтрованная вода<br>
+                        - Краситель желтый<br>
+                        - Творожный сыр<br>
+                        - Сливки 33%<br>
+                        - Банан
+                    </td>
+                    <td>165 руб</td>
+                    <td>85гр (+/-5гр)</td>
+                    <td>к-241; б-2,47; ж-9,22; у-37,37</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_6.jpg" alt="Моти-Малина"></td>
+                    <td>
+                        Моти-Малина<br>
+                        Состав:<br>
+                        - Клейковая рисовая мука<br>
+                        - Сахарная пудра<br>
+                        - Фильтрованная вода<br>
+                        - Краситель красный<br>
+                        - крахмал<br>
+                        - Творожный сыр<br>
+                        - малина<br>
+                        - сливки 33%<br>
+                    </td>
+                    <td>165 руб</td>
+                    <td>85гр (+/-5гр)</td>
+                    <td>к-236; б-2,78г; ж-37,73г; у-2,78г</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_7.jpg" alt="Моти-Ваниль"></td>
+                    <td>
+                        Моти-Ваниль<br>
+                        Состав:<br>
+                        - Клейковая рисовая мука<br>
+                        - Сахарная пудра<br>
+                        - Фильтрованная вода<br>
+                        - Краситель красный<br>
+                        - крахмал<br>
+                        - сыр маскарпоне<br>
+                        - Творожный сыр<br>
+                        - ваниль<br>
+                        - сливки 33%<br>
+                    </td>
+                    <td>165 руб</td>
+                    <td>55гр (+/-5гр)</td>
+                    <td>к-236; б-2,78г; ж-37,73г; у-2,78г</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_8.jpg" alt="Моти-Маракуйя"></td>
+                    <td>
+                        Моти-Маракуйя<br>
+                        Состав:<br>
+                        - Клейковая рисовая мука<br>
+                        - Сахарная пудра<br>
+                        - Фильтрованная вода<br>
+                        - Краситель красный<br>
+                        - крахмал<br>
+                        - сыр маскарпоне<br>
+                        - Творожный сыр<br>
+                        - конфитюр маракуйя<br>
+                        - сливки 33%<br>
+                    </td>
+                    <td>165 руб</td>
+                    <td>65гр (+/-5гр)</td>
+                    <td>к-249; б-2,40г; ж-35г; у-25,78г</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_9.jpg" alt="Медовик б/с"></td>
+                    <td>
+                        Медовик б/с<br>
+                        Состав:<br>
+                        - яйцо<br>
+                        - сироп топинамбура<br>
+                        - мёд<br>
+                        - творог обезжиренный<br>
+                        - крахмал кукурузный<br>
+                        - сухое обез-е молоко<br>
+                        - желток<br>
+                        - сахзам<br>
+                        - хлопья овсяные<br>
+                        - кокосовое масло<br>
+                    </td>
+                    <td>195 руб</td>
+                    <td>95гр (+/-10гр)</td>
+                    <td>к-354; б-12,2; ж-14,2; у-43,1</td>
+                    <td>24ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_10.jpg" alt="Печенье-брауни (а/к)"></td>
+                    <td>
+                        Печенье-брауни (а/к)<br>
+                        Состав:<br>
+                        - какао<br>
+                        - яйца<br>
+                        - мука<br>
+                        - сахар<br>
+                        - апельсин. курд<br>
+                        - крем чиз<br>
+                    </td>
+                    <td>200 руб</td>
+                    <td>110гр (+/-10гр)</td>
+                    <td>к-556; б-7,43г; ж-34,66г; у-54,26г</td>
+                    <td>36ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_11.jpg" alt="ПП шоколадное Брауни"></td>
+                    <td>
+                        ПП шоколадное Брауни<br>
+                        Состав:<br>
+                        - рисовая мука<br>
+                        - миндальная мука<br>
+                        - молочный шоколад<br>
+                        - сироп топинамбура<br>
+                        - грецкий орех<br>
+                    </td>
+                    <td>220 руб</td>
+                    <td>100гр (+/-10гр)</td>
+                    <td>к-480; б-9,99г; ж-33,66г; у-34,37г</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_12.jpg" alt="ПП батончик Ш/К"></td>
+                    <td>
+                        ПП батончик Ш/К<br>
+                        Состав:<br>
+                        - Арахис<br>
+                        - Семена подсолнуха<br>
+                        - Какао<br>
+                        - Кэроб<br>
+                        - Кокосовая мука<br>
+                        - Карамель: сироп топинамбура и кокосовое молоко<br>
+                    </td>
+                    <td>180 руб</td>
+                    <td>50гр (+/-)</td>
+                    <td>к-125; б-3,25; ж-9,74; у-5,41</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_13.jpg" alt="ПП батончик Кокос"></td>
+                    <td>
+                        ПП батончик Кокос<br>
+                        Состав:<br>
+                        - Кокосовая стружка<br>
+                        - Кокосовое молоко<br>
+                        - Сироп топинамбура<br>
+                        - Какао масло<br>
+                        - Кешью<br>
+                    </td>
+                    <td>180 руб</td>
+                    <td>75гр (+/-)</td>
+                    <td>к-469; б-4,6; ж-42,93; у-19,39</td>
+                    <td>-</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="путь_к_изображению_14.jpg" alt="Ириски"></td>
+                    <td>
+                        Ириски<br>
+                        Состав:<br>
+                        - Сахар<br>
+                        - Сливочное масло 82,5%<br>
+                        - Сливки 33%<br>
+                    </td>
+                    <td>95 руб</td>
+                    <td>25гр (+/-)</td>
+                    <td>к-424; б-0,59; ж-23,47; у-54,32</td>
+                    <td>14 дней</td>
+                </tr>
+
+
+
                 <!-- Другие строки таблицы с продуктами и сочетаниями -->
             </tbody>
         </table>
