--- a/index.html
+++ b/index.html
@@ -421,6 +421,240 @@
                     <td>к-424; б-0,59; ж-23,47; у-54,32</td>
                     <td>14 дней</td>
                 </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/granola_mango.jpg" alt="Гранола Манго"></td>
+                    <td>
+                        Гранола Манго<br>
+                        Состав:<br>
+                        - гранола домашняя<br>
+                        - банан пюре<br>
+                        - манго пюре<br>
+                        - кокосовое молоко
+                    </td>    
+                    <td>195 руб</td>
+                    <td>140гр (+/-5гр)</td>
+                    <td>К-205<br>Б-4,9<br>Ж-9,6<br>У-27,8</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/bagel_indy.jpg" alt="Бейгл с индейкой"></td>
+                    <td>
+                        Бейгл с индейкой<br>
+                        Состав:<br>
+                        - Соус авторский<br>
+                        - Индейка<br>
+                        - Лист салата<br>
+                        - Огурец<br>
+                        - Помидор
+                    </td>
+                    <td>215 руб</td>
+                    <td>190гр (+/-10гр)</td>
+                    <td>К-315<br>Б-13,1<br>Ж-11<br>У-39,9</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/syrniki.jpg" alt="Сырники"></td>
+                    <td>
+                        Сырники 3шт<br>
+                        Состав:<br>
+                        - творог 9%<br>
+                        - творожный сыр<br>
+                        - желток<br>
+                        - сахар<br>
+                        - мука
+                    </td>
+                    <td>195 руб</td>
+                    <td>150гр (+/-5гр)</td>
+                    <td>К-376<br>Б-19,92<br>Ж-18,25<br>У-33,37</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/kasha_kuragovaya.jpg" alt="Каша 'Кураговая'"></td>
+                    <td>
+                        Каша "Кураговая"<br>
+                        Состав:<br>
+                        - сок абрикосовый<br>
+                        - мука<br>
+                        - вода<br>
+                        - сахар<br>
+                        - урбеч
+                    </td>
+                    <td>195 руб</td>
+                    <td>190гр (+/-10гр)</td>
+                    <td>К-346<br>Б-13,1<br>Ж-11<br>У-39,9</td>
+                    <td>72ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/risovaya_kasha.jpg" alt="Рисовая каша с голубикой на кокосовом молоке"></td>
+                    <td>
+                        Рисовая каша с голубикой на кокосовом молоке<br>
+                        Состав:<br>
+                        - рис "италика"<br>
+                        - кокосовое молоко<br>
+                        - сироп топинамбура<br>
+                        - семена чиа<br>
+                        - голубика
+                    </td>
+                    <td>225 руб</td>
+                    <td>175гр (+/-10гр)</td>
+                    <td>К-240<br>Б-2,62<br>Ж-11,4<br>У-32</td>
+                    <td>36ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/granola_s_iogurtom.jpg" alt="Гранола с йогуртом"></td>
+                    <td>
+                        Гранола с йогуртом<br>
+                        Состав:<br>
+                        - домашняя гранола<br>
+                        - творог/йогурт<br>
+                        - брусничный конфитюр
+                    </td>
+                    <td>210 руб</td>
+                    <td>210гр (+/-5гр)</td>
+                    <td>К-335<br>Б-20,81<br>Ж-8,92<br>У-46,59</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/bowl_indy.jpg" alt="Боул с Индейкой"></td>
+                    <td>
+                        Боул с Индейкой<br>
+                        Состав:<br>
+                        - индейка<br>
+                        - соус цезарь<br>
+                        - мини шпинат<br>
+                        - салат романо<br>
+                        - булгур<br>
+                        - томаты черри<br>
+                        - вяленные томаты<br>
+                        - кукуруза початок<br>
+                        - капуста красная<br>
+                        - орегано сушеный
+                    </td>
+                    <td>340 руб</td>
+                    <td>210гр (+/-10гр)</td>
+                    <td>К-316<br>Б-10,84<br>Ж-21,9<br>У-22,43</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/salat_cezar.jpg" alt="Салат 'Цезарь'"></td>
+                    <td>
+                        Салат "Цезарь"<br>
+                        Состав:<br>
+                        - салат Романо<br>
+                        - черри<br>
+                        - перепел яйцо<br>
+                        - пармезан<br>
+                        - филе куринной грудки<br>
+                        - соус цезарь
+                    </td>
+                    <td>245 руб</td>
+                    <td>170г</td>
+                    <td>К-320<br>Б-20,5г<br>Ж-18,5г<br>У-17г</td>
+                    <td>24ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/fruit_mix.jpg" alt="Фруктовый микс"></td>
+                    <td>
+                        Фруктовый микс<br>
+                        Состав:<br>
+                        - ананас<br>
+                        - киви<br>
+                        - клубника
+                    </td>
+                    <td>235 руб</td>
+                    <td>150гр (+/-10гр)</td>
+                    <td>К-44<br>Б-0,74<br>Ж-0,29<br>У-11,02</td>
+                    <td>24ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/sladkaya_morkov.jpg" alt="Сладкая морковь"></td>
+                    <td>
+                        Сладкая морковь<br>
+                        Состав:<br>
+                        - морковь
+                    </td>
+                    <td>75 руб</td>
+                    <td>100гр (+/-10гр)</td>
+                    <td>К-41<br>Б-0,93<br>Ж-0,24<br>У-9,58</td>
+                    <td>36ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/pasta_bolonese.jpg" alt="Паста Болоньезе"></td>
+                    <td>
+                        Паста Болоньезе<br>
+                        Состав:<br>
+                        - паста, мясной фарш<br>
+                        - томаты<br>
+                        - соус болоньезе<br>
+                        - пармезан
+                    </td>
+                    <td>255 руб</td>
+                    <td>250г</td>
+                    <td>К-443<br>Б-26г<br>Ж-20г<br>У-41г</td>
+                    <td>36ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/shpinatnaya_pasta.jpg" alt="Шпинатная Паста с курицей и грибами"></td>
+                    <td>
+                        Шпинатная Паста с курицей и грибами<br>
+                        Состав:<br>
+                        - шпинатные спагетти<br>
+                        - филе куринной грудки<br>
+                        - шампиньоны<br>
+                        - соус курица грибы<br>
+                        - пармезан
+                    </td>
+                    <td>255 руб</td>
+                    <td>250г</td>
+                    <td>К-568<br>Б-20,5г<br>Ж-32г<br>У-58г</td>
+                    <td>36ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/grill_cheese.jpg" alt="Гриль Чиз"></td>
+                    <td>
+                        Гриль Чиз<br>
+                        Состав:<br>
+                        - тартин<br>
+                        - горчица зернистая<br>
+                        - говяжья ветчина<br>
+                        - соус морне<br>
+                        - чеддер тертый<br>
+                        - гауда тертая<br>
+                        - лук маринованный
+                    </td>
+                    <td>235 руб</td>
+                    <td>310гр (+/-15гр)</td>
+                    <td>К-480<br>Б-27,67<br>Ж-30,36<br>У-22,59</td>
+                    <td>48ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/kruassan_semgoy.jpg" alt="Круассан с семгой"></td>
+                    <td>
+                        Круассан с семгой<br>
+                        Состав:<br>
+                        - круассан<br>
+                        - малосольная рыба<br>
+                        - творожный сыр<br>
+                        - лист салата<br>
+                        - помидор
+                    </td>
+                    <td>320 руб</td>
+                    <td>230гр (+/-10гр)</td>
+                    <td>К-381<br>Б-14,51<br>Ж-22,42<br>У-30,99</td>
+                    <td>16ч</td>
+                </tr>
+                <tr>
+                    <td rowspan="1"><img src="img/smuzi_apelsinovyy_fresh.jpg" alt="Смузи, Фреши - Апельсиновый Фреш"></td>
+                    <td>
+                        Смузи, Фреши - Апельсиновый Фреш<br>
+                        Состав:<br>
+                        - свежевыжатый сок
+                    </td>
+                    <td>220 руб</td>
+                    <td>250гр</td>
+                    <td>К-112<br>Б-1,75<br>Ж-0,5<br>У-26</td>
+                    <td>24ч</td>
+                </tr>
 
 
 
